[gd_scene load_steps=11 format=3 uid="uid://72p55jbchb73"]

[ext_resource type="Script" uid="uid://b18fhm2mhgba" path="res://scripts/HUD.gd" id="1_f6qnu"]
[ext_resource type="FontFile" uid="uid://baxrq1x64p2ip" path="res://assets/fonts/ShareTechMono-Regular.ttf" id="2_k4w17"]
[ext_resource type="FontFile" uid="uid://bice5em53eool" path="res://assets/fonts/SpaceMono-Italic.ttf" id="3_twldb"]
[ext_resource type="FontFile" uid="uid://c3yofokgft3jw" path="res://assets/fonts/SpaceMono-BoldItalic.ttf" id="4_8cuoo"]
[ext_resource type="FontFile" uid="uid://dr45t2n75w68l" path="res://assets/fonts/SpaceMono-Bold.ttf" id="5_cf6ij"]
[ext_resource type="Script" uid="uid://momyt4c4d30h" path="res://scripts/MiniMapDisplay.gd" id="6_meimr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rve7n"]
bg_color = Color(0.129412, 0.713726, 0.243137, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ljw04"]
bg_color = Color(0.0588235, 0.0588235, 0.0588235, 1)
expand_margin_left = 20.0
expand_margin_top = 20.0
expand_margin_right = 20.0
expand_margin_bottom = 20.0
shadow_color = Color(0.627451, 0.121569, 0.941176, 0.235294)
shadow_size = 35

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_467v5"]
bg_color = Color(0.0605303, 0.0605303, 0.0605303, 1)
shadow_color = Color(0.627451, 0.121569, 0.941176, 0.235294)
shadow_size = 35

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_natmc"]
bg_color = Color(0.0497766, 0.0497767, 0.0497766, 1)
shadow_color = Color(0.627451, 0.121569, 0.941176, 0.235294)
shadow_size = 35

[node name="HUD" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_f6qnu")

[node name="FadeOverlay" type="ColorRect" parent="."]
modulate = Color(0, 0, 0, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="HealthLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -0.5
offset_top = 25.0
offset_right = 0.5
offset_bottom = 48.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_k4w17")
theme_override_font_sizes/font_size = 15
horizontal_alignment = 1

[node name="MessageLog" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(0, 70)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/normal_font = ExtResource("2_k4w17")
theme_override_fonts/mono_font = ExtResource("2_k4w17")
theme_override_fonts/italics_font = ExtResource("3_twldb")
theme_override_fonts/bold_italics_font = ExtResource("4_8cuoo")
theme_override_fonts/bold_font = ExtResource("5_cf6ij")
theme_override_font_sizes/bold_italics_font_size = 14
theme_override_font_sizes/italics_font_size = 14
theme_override_font_sizes/mono_font_size = 15
theme_override_font_sizes/normal_font_size = 15
theme_override_font_sizes/bold_font_size = 14
bbcode_enabled = true
scroll_following = true

[node name="HealthBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(0, 10)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 27.0
grow_horizontal = 2
scale = Vector2(1, 0.4)
theme_override_styles/fill = SubResource("StyleBoxFlat_rve7n")
show_percentage = false

[node name="MiniMapBG" type="ColorRect" parent="."]
custom_minimum_size = Vector2(104, 104)
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -104.0
offset_top = -104.0
grow_horizontal = 0
grow_vertical = 0
color = Color(0.0943044, 0.0943044, 0.0943043, 1)

[node name="MiniMapDisplay" type="Node2D" parent="MiniMapBG"]
script = ExtResource("6_meimr")

[node name="ActionsLabel" type="Label" parent="."]
visible = false
modulate = Color(0.58, 0.58, 0.58, 1)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -216.0
offset_top = 60.0
offset_right = 216.0
offset_bottom = 84.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("5_cf6ij")
theme_override_font_sizes/font_size = 11
text = "Press [e] to examine  |  Press [g] to pickup"
horizontal_alignment = 1

[node name="ExaminePanel" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(300, 300)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ljw04")

[node name="VBoxContainer" type="VBoxContainer" parent="ExaminePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ExamineText" type="RichTextLabel" parent="ExaminePanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
theme_override_constants/line_separation = 6
theme_override_fonts/normal_font = ExtResource("2_k4w17")
theme_override_fonts/mono_font = ExtResource("2_k4w17")
theme_override_fonts/italics_font = ExtResource("3_twldb")
theme_override_fonts/bold_italics_font = ExtResource("4_8cuoo")
theme_override_fonts/bold_font = ExtResource("5_cf6ij")
theme_override_font_sizes/bold_italics_font_size = 13
theme_override_font_sizes/italics_font_size = 13
theme_override_font_sizes/mono_font_size = 14
theme_override_font_sizes/normal_font_size = 14
theme_override_font_sizes/bold_font_size = 13

[node name="OkBtn" type="Button" parent="ExaminePanel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_k4w17")
text = "OK"

[node name="EnterHighScorePanel" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(300, 200)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_467v5")

[node name="VBoxContainer" type="VBoxContainer" parent="EnterHighScorePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -63.0
offset_top = -46.5
offset_right = 63.0
offset_bottom = 46.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="EnterHighScorePanel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_k4w17")
text = "New High Score!"
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="EnterHighScorePanel/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_k4w17")
placeholder_text = "Enter your initials..."
alignment = 1
max_length = 3
caret_blink = true

[node name="SubmitButton" type="Button" parent="EnterHighScorePanel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_k4w17")
text = "Submit"

[node name="QuitDialogue" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(300, 100)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_natmc")

[node name="VBoxContainer" type="VBoxContainer" parent="QuitDialogue"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="QuitDialogue/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_k4w17")
text = "Quit to main menu?"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="QuitDialogue/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="YesBtn" type="Button" parent="QuitDialogue/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_k4w17")
text = "Yes"

[node name="NoBtn" type="Button" parent="QuitDialogue/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_k4w17")
text = "No"

[connection signal="pressed" from="ExaminePanel/VBoxContainer/OkBtn" to="." method="_on_ok_pressed"]
[connection signal="pressed" from="EnterHighScorePanel/VBoxContainer/SubmitButton" to="." method="_on_submit_hs_pressed"]
[connection signal="pressed" from="QuitDialogue/VBoxContainer/HBoxContainer/YesBtn" to="." method="_on_yes_quit_pressed"]
[connection signal="pressed" from="QuitDialogue/VBoxContainer/HBoxContainer/NoBtn" to="." method="_on_no_quit_pressed"]
